--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <head>
     <title>Odin Recipes</title>
     <meta charset='UTF-8'>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <h1>Odin Recipes</h1>
   <ul>
-    <li><a href='recipes/lasagna.html' alt='lasagna recipe'>Lasagna</a></li>
-    <li><a href='recipes/hot_crackers.html' alt='hot crackers recipe'>Hot Crackers</a></li>
-    <li><a href='recipes/chili_beans.html' alt='chili beans recipe'>Chili Beans</a></li>
+    <li><a class='title1'href='recipes/lasagna.html' alt='lasagna recipe'>Lasagna</a></li>
+    <li><a class='title2'href='recipes/hot_crackers.html' alt='hot crackers recipe'>Hot Crackers</a></li>
+    <li><a class='title3'href='recipes/chili_beans.html' alt='chili beans recipe'>Chili Beans</a></li>
   </ul>
 
 </body>
